--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,7 @@
 h1 {
   font-size: 2.5rem;
   font-family: sans-serif;
-  margin-top: 15rem;
+  margin-top: 5rem;
   margin-left: 20rem;
 }
 
@@ -18,7 +18,7 @@ h2 {
 }
 
 nav {
-  height: 580px;
+  height: 560px;
   background-color: #cec9c8;
 }
 
@@ -45,14 +45,14 @@ nav ul li {
 .icons {
   float: right;
   margin-top: 3rem;
-  margin-right: 10rem;
+  margin-right: 4.rem;
   width: 17%;
 }
 
 .featured {
   width: 85%;
   margin: 3rem;
-  align-items: center;
+  padding-left: 3rem;
 }
 
 .video {
