--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -17,36 +17,46 @@ h2 {
   margin: 4rem;
 }
 
-nav {
+header {
   height: 560px;
   background-color: #cec9c8;
+  display: flex;
+  align-items: flex-start;
 }
 
-nav ul {
-  float: right;
-  padding-right: 2rem;
+.nav {
+  display: flex;
+  align-items: flex-start;
 }
 
-nav ul li {
+.nav ul {
+  margin-left: 4rem;
+}
+
+.nav ul li {
   display: inline-block;
   text-decoration: none;
-  margin: 2rem;
-  padding-top: 2rem;
+  padding-left: 2rem;
+  padding-top: 3.5rem;
   font-size: 0.9rem;
   font-family: sans-serif;
 }
 
 .search {
   width: 1.8rem;
-  float: right;
-  margin-top: 4.5rem;
+  margin-top: 4rem;
+  padding-left: 2rem;
 }
 
 .icons {
   float: right;
   margin-top: 3rem;
-  margin-right: 4.rem;
+  margin-right: 5rem;
   width: 17%;
+}
+
+.container {
+  position: relative;
 }
 
 .featured {
@@ -67,6 +77,7 @@ nav ul li {
 .instagram {
   display: flex;
   margin-left: 6.5rem;
+  align-items: flex-start;
 }
 
 .insta {
@@ -78,7 +89,7 @@ nav ul li {
   font-size: 1rem;
   padding: 0.5rem 2rem;
   background-color: white;
-  float: right;
+  position: absolute;
 }
 
 .vendor-button {
