--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,7 @@
 h1 {
   font-size: 2.5rem;
   font-family: sans-serif;
-  margin-top: 5rem;
+  margin-top: 10rem;
   margin-left: 20rem;
 }
 
@@ -30,7 +30,7 @@ header {
 }
 
 .nav ul {
-  margin-left: 4rem;
+  margin-left: 16rem;
 }
 
 .nav ul li {
@@ -55,7 +55,7 @@ header {
   width: 17%;
 }
 
-.container {
+.container1 {
   position: relative;
 }
 
@@ -65,8 +65,23 @@ header {
   padding-left: 3rem;
 }
 
+.event-button {
+  font-size: 1rem;
+  padding: 0.5rem 2rem;
+  background-color: white;
+  position: absolute;
+  margin: -17rem;
+  margin-top: 25rem;
+}
+
+.container2 {
+  position: relative;
+  width: 1420px;
+}
+
 .video {
   width: 40%;
+  margin-left: 6rem;
 }
 
 .vendor {
@@ -74,29 +89,23 @@ header {
   margin-left: 2rem;
 }
 
+.vendor-button {
+  font-size: 1rem;
+  padding: 0.4rem 1.5rem;
+  background-color: white;
+  position: absolute;
+  margin: -14rem;
+  margin-top: 17rem;
+}
+
 .instagram {
-  display: flex;
-  margin-left: 6.5rem;
+  margin-left: 9.5rem;
   align-items: flex-start;
 }
 
 .insta {
   width: 20%;
   margin: 0.7rem;
-}
-
-.event-button {
-  font-size: 1rem;
-  padding: 0.5rem 2rem;
-  background-color: white;
-  position: absolute;
-}
-
-.vendor-button {
-  font-size: 1rem;
-  padding: 0.4rem 1.5rem;
-  background-color: white;
-  float: right;
 }
 
 .insta-button {
@@ -112,17 +121,19 @@ header {
   margin-top: 6rem;
   height: 300px;
   background-color: #cec9c8;
+  display: flex;
+  align-items: flex-start;
 }
 
 .signup {
-  margin-left: 6rem;
+  margin-left: 4rem;
+  margin-top: 10rem;
 }
 
 .footer ul {
-  float: right;
-  margin-right: 8rem;
-  display: block;
   font-family: sans-serif;
+  margin-top: 8rem;
+  margin-left: 30rem;
 }
 
 .footer ul li {
@@ -132,4 +143,5 @@ header {
 
 .footer ul li small {
   display: block;
+  margin-top: 0.5rem;
 }
