add change on css

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -40,6 +40,10 @@ header {
   padding-top: 3.5rem;
   font-size: 0.9rem;
   font-family: sans-serif;
+
+  a {
+    text-decoration: none;
+  }
 }
 
 .search {
