--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -92,7 +92,7 @@ header {
 
 .vendor {
   width: 33%;
-  margin-left: 2rem;
+  margin-left: 1rem;
 }
 
 .vendor-button {
@@ -161,6 +161,7 @@ input {
   font-family: sans-serif;
   margin-top: 8rem;
   margin-left: 30rem;
+  font-weight: bold;
 }
 
 .footer ul li {
@@ -182,6 +183,10 @@ input {
     padding-left: 1rem;
   }
 
+  .event-button {
+    margin-top: 20rem;
+  }
+
   .container2 {
     width: 1300px;
   }
@@ -196,8 +201,28 @@ input {
     margin-left: 1rem;
   }
 
+  .vendor-button {
+    margin-top: 10rem;
+  }
+
+  .insta-button {
+    margin-left: 18rem;
+  }
+
   h1 {
     margin-left: 10rem;
+  }
+
+  h2 {
+    margin-left: 3rem;
+  }
+
+  input {
+    margin-left: 3rem;
+  }
+
+  .footer ul {
+    margin-left: 15rem;
   }
 }
 
@@ -211,12 +236,26 @@ input {
   }
 
   h1 {
-    margin-left: 2rem;
+    margin-left: 6rem;
   }
 
   .insta {
     width: 22%;
     margin: 0.4rem;
+  }
+}
+
+@media (max-width: 900px) {
+  .event-button {
+    margin-top: 15rem;
+  }
+
+  h1 {
+    margin-left: 9rem;
+  }
+
+  .instagram {
+    margin-left: 5rem;
   }
 }
 
@@ -237,12 +276,24 @@ input {
     margin-left: 1rem;
   }
 
+  .vendor-button {
+    display: none;
+  }
+
   .instagram {
     margin-left: 6rem;
   }
 
+  .insta-button {
+    margin-left: 10rem;
+  }
+
   h1 {
     margin-left: -2rem;
+  }
+
+  .footer ul {
+    margin-left: 5rem;
   }
 }
 
@@ -266,7 +317,7 @@ input {
   }
 
   .container2 {
-    display: list-item;
+    display: block;
   }
 
   .video {
@@ -274,10 +325,14 @@ input {
     width: 26%;
   }
 
+  .vendor {
+    width: 20%;
+    margin: 0;
+  }
+
   h1 {
-    margin-top: 2rem;
-    margin-left: 1rem;;
-    font-size: 2rem;
+    font-size: 1.5rem;
+    margin: 2.6rem;
   }
 
   .insta {
@@ -287,6 +342,39 @@ input {
 
   .instagram {
     margin-left: 3rem;
+  }
+
+  .insta-button {
+    margin-top: 3rem;
+    margin-left: 1.6rem;
+    padding: 0.7rem 2rem;
+  }
+
+  h2 {
+    margin-left: 3rem;
+  }
+
+  input {
+    margin-left: 3rem;
+    width: 230px;
+  }
+
+  .signup {
+    margin-left: 8rem;
+    margin-top: 1rem;
+  }
+
+  .footer {
+    margin-top: 4rem;
+    display: block;
+    height: 450px;
+  }
+
+  .footer ul {
+    margin-top: 2rem;
+    margin-left: 2.3rem;
+    padding-left: 0;
+    padding-right: 10rem;
   }
 }
 
